# reviewbot

./: .env.example  .gitignore  .reviewignore.example  Dockerfile  LICENSE  README.md  api.py  docker-compose.dev.yml  pyproject.toml
.github/workflows/: ci.yml
examples/: webhook_api.py
repo/: main.py
src/reviewbot/: context.py  main.py
src/reviewbot/agent/: base.py  workflow.py
src/reviewbot/agent/prompts/: review_prompt.py
src/reviewbot/agent/prompts/gitlab/: acknowledgment.md  summary.md
src/reviewbot/agent/prompts/review/: deep_review.md  quick_scan.md  validate_issues.md
src/reviewbot/agent/tasks/: core.py  data.py  issues.py
src/reviewbot/agent/workflow/: __init__.py  config.py  diff_extract.py  discussions.py  gitlab_notes.py  hooks.py  ignore.py  runner.py  state.py
src/reviewbot/cli/: app.py  commands.py
src/reviewbot/core/: agent.py  config.py
src/reviewbot/core/issues/: __init__.py  issue.py  issue_model.py  issue_store.py
src/reviewbot/core/reviews/: review.py  review_model.py
src/reviewbot/infra/config/: env.py
src/reviewbot/infra/embeddings/: in_memory_store.py  openai.py  store_manager.py
src/reviewbot/infra/git/: clone.py  repo_tree.py
src/reviewbot/infra/gitlab/: clone.py  diff.py  note.py
src/reviewbot/infra/issues/: in_memory_issue_store.py
src/reviewbot/models/: gemini.py  gpt.py  openrouter.py
src/reviewbot/prompts/: get_prompt.py
src/reviewbot/tools/: __init__.py  compile_codebase.py  diff.py  issues.py  ls_dir.py  read_file.py  search_codebase.py  think.py
tests/: test_agent.py  test_ai.py  test_gitlab_discussions.py  test_search_codebase.py
