[project]
name = "reviewbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.1",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.5",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.5",
    "rich>=14.2.0",
    "transformers>=4.57.3",
    "typer>=0.20.0",
]
[tool.uv]
package = true
[project.scripts]
reviewbot = "reviewbot.main:app"
[tool.pyright]
typeCheckingMode = "strict"
[project.optional-dependencies]
examples = ["fastapi"]
