[project]
name = "reviewbot"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.1",
    "fastapi>=0.125.0",
    "httpx>=0.28.1",
    "ido-agents @ git+https://github.com/canefe/ido-agents.git@v0.1.4",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.1.2",
    "langchain-openai>=1.1.5",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.5",
    "langsmith>=0.5.0",
    "pytest>=9.0.2",
    "rich>=14.2.0",
    "transformers>=4.57.3",
    "typer>=0.20.0",
    "uvicorn>=0.40.0",
]
[tool.uv]
package = true

[project.scripts]
reviewbot = "reviewbot.main:app"
[tool.pyright]
typeCheckingMode = "strict"
extraPaths = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.8.6",
    "ty>=0.0.4",
]
[project.optional-dependencies]
examples = ["fastapi"]
